--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ version = 0.0.1-SNAPSHOT
 bintrayUserOrg = apis-and-processors
 organization = apis-and-processors
 repository = java-libraries
-description = Type checked pipeline for processing Guava Functions
+description = Type checked pipeline for processing Functions
 
 # credentials required for releasing. should be overridden in your ~/.gradle/gradle.properties file
 githubUsername=some_name
