--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-group = com.github
-version = 0.0.2-SNAPSHOT
+group = com.github.aap
+version = 0.0.1-SNAPSHOT
 
 # analogous to github username or org name
 bintrayUserOrg = apis-and-processors
