Introduction of @Cache annotation which can be applied to both outputs (method annotation) and inputs (parameter annotation) to get and set a given value to a behind-the-scenes cache. This allows the side-stepping of the normal output-input-output-input model and allows a handler to cache its return value for use further downstream and not necessarily in use by the immediate successive handler.

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.1'
     compile 'net.jodah:failsafe:1.0.3'
     compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'javax.inject:javax.inject:1'
     testCompile ('org.testng:testng:6.8.21') 
     testCompile ('org.assertj:assertj-core:1.7.0') 
 }
